adicionando funcionalidades